--- a/src/public_html/resources/stylesheets/main.css
+++ b/src/public_html/resources/stylesheets/main.css
@@ -203,3 +203,9 @@ button:hover {
   cursor: pointer;
   border: 1px solid black;
 }
+
+@media only screen and (max-width: 600px) {
+    header p {
+      margin-left: 0;
+    }
+}
