--- a/src/public_html/resources/stylesheets/main.css
+++ b/src/public_html/resources/stylesheets/main.css
@@ -169,8 +169,13 @@ p.formValidationError {
 }
 
 pre, tt {
-	background-color: lightgray;
+	background-color: #efefef;
 	padding: .2em;
+}
+
+pre {
+  box-shadow: 0px 0px 2px #666;
+  padding: 1em;
 }
 
 tt {
@@ -220,6 +225,20 @@ button:hover {
 }
 
 #sidebarToggle:hover a {
+}
+
+div.list-icon {
+  display: inline-block;
+  width: 1em;
+  height: 1em;
+  border-radius: 50%;
+  margin-right: .5em;
+  text-align: center;
+}
+
+ul.no-bullets {
+  list-style: none;
+  padding-left: 1em;
 }
 
 @media only screen and (max-width: 600px) {
